--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,14 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.4",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/sanctum": "^2.3",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
@@ -21,6 +23,7 @@
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
+        "nunomaduro/larastan": "^0.5.8",
         "phpunit/phpunit": "^8.5"
     },
     "config": {
@@ -59,6 +62,13 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "pcf": "php-cs-fixer fix",
+        "test:types": "phpstan analyse --ansi",
+        "test:features": "phpunit --colors=always",
+        "test": [
+            "@test:types",
+            "@test:features"
         ]
     }
 }
